tests/regression/error/hw4_error01.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY {lft=EXP_NUM 1,opr=BOP_PLUS,rht=EXP_BOOL true}}]}
  : program
;
